# MoonToolBox

./: .codexignore  .gitignore  AGENTS.md  LICENSE  README.md  ros_tool_suite.spec  ros_tool_suite_onefile.spec  tool_suite_gui.py
backend/: requirements.txt  run.py
backend/app/: catalog.py  main.py  models.py
cpp/: CMakeLists.txt  README.md
cpp/include/ros_tool_suite/mapping/: exporters.hpp  map_builder.hpp  pcd_reader.hpp  types.hpp
cpp/include/ros_tool_suite/network/: scanner.hpp
cpp/include/ros_tool_suite/perception/: costmap_player.hpp
cpp/include/ros_tool_suite/slicing/: tile_splitter.hpp
cpp/src/costmap_cli/: main.cpp
cpp/src/gui/: main.cpp
cpp/src/mapping/: exporters.cpp  map_builder.cpp  pcd_reader.cpp
cpp/src/network/: scanner.cpp
cpp/src/network_cli/: main.cpp
cpp/src/pcd_map_cli/: main.cpp
cpp/src/pcd_tile_cli/: main.cpp
cpp/src/perception/: costmap_player.cpp
cpp/src/slicing/: tile_splitter.cpp
data/: tool_modules.json
docs/: ARCHITECTURE.md  CPP_REWRITE_PLAN.md  WEB_ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json
output_costmap/: costmap_summary.txt
output_costmap_web/: costmap_summary.txt
output_tiles/: pointcloud_data_metadata.yaml
output_tiles_web/: pointcloud_data_metadata.yaml
scripts/: build_dist.cmd  build_dist.ps1  build_installer.cmd  build_installer.ps1  build_onefile.ps1  diagnose_mtslash.cmd  diagnose_mtslash.py  install_local.cmd  install_local.ps1  installer.iss  run_backend.cmd  run_frontend.cmd  start_local.cmd  start_local.ps1
web/: README.md
(+45 files in other folders)
